changes misc view to react view with much cleanup

--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -14,7 +14,7 @@
     <li class="navlink-container"><a ui-sref="angular">ANGULAR</a></li>
     <li class="navlink-container"><a ui-sref="es6">ES6</a></li>
     <li class="navlink-container"><a ui-sref="node">NODE</a></li>
-    <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
+    <li class="navlink-container"><a ui-sref="react">REACT</a></li>
 
   </ul>
 </nav>
