--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script src="./states/home/homeCtrl.js"></script>
 <script src="./states/journal/journalCtrl.js"></script>
 <script src="./states/jquery/jqueryCtrl.js"></script>
-<script src="./states/misc/miscCtrl.js"></script>
+<script src="./states/react/reactCtrl.js"></script>
 <script src="./states/ecma/ecmaCtrl.js"></script>
 <script src="./states/sass/sassCtrl.js"></script>
 <script src="./states/angular/angularCtrl.js"></script>
