--- a/states/es6/es6.html
+++ b/states/es6/es6.html
@@ -21,6 +21,10 @@ paste temp
     var cereal = riceCrispies.map(key => key.character);
           // ["snap!", "Crackle!", "Pop!"]
     </pre>
+    <pre>
+      name4 = names.map(poop => `${poop.name}'s id is ${poop.id}`)
+  (4) ["astrid's id is 1", "beau's id is 2", "chuck's id is 3", "derrick's id is 4"]
+</pre>
 
   </div>
   <div class="simple-frame2"><h3 class="chtitle">The spread operator: ES6</h3>
