--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -5,7 +5,7 @@
     <!--
     <h2 class="date">Friday Aug 4th, 2017</h2>
     <h4 class="sleep">Slept: 5 hours</h4><br><br>
-    <h3 class="subtitle">React is slow-going. The implementation of things like Obj destructuring seem deceptively easy. --Surprisingly easy. I've been offered the opportunity to beta test the training (to be launched next week) by Petr at  </h3>
+    <h3 class="subtitle">React is slow-going. The implementation of things like Obj destructuring seem deceptively easy. -Surprisingly easy. I've been offered the opportunity to beta test the training (to be launched next week) by Petr at  </h3>
     <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
     <p lang="en" dir="ltr">The rendering process of a web page <a href="https://t.co/vWjj77tYzv">https://t.co/vWjj77tYzv</a>
     </p>&mdash; Sven Baumgartner (@svenbaumgartner) <a href="https://twitter.com/svenbaumgartner/status/793736407789477889">November 2, 2016</a></blockquote>
@@ -23,6 +23,26 @@
     </ol>
         <hr />
   -->
+  <h2 class="date">Saturday Aug 12th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">I've begun to understand stateful components. A week of heads-down in React is finally reaping rewards. It's a text-book example of "if it hurts, do it more" strategy. I'm composing components sans constructors and super() and the other gobble-dee-gook. It's an abstraction that I just--don't--quite--get...(using a stage-2 propposal:<code>"plugins": ["babel-plugin-transform-class-properties"]</code>)<br />
+  I may have to go back to the conventional way before I get comfortable with what this more concise code is doing.<br /><br />I heard an interesting comment by Kyle Simpson on arrow functions. Kyle's advice for them is the same for anon functions..."Use named functions" as self-documenting code. In this FEM React training as well... Brian Holt doesn't go quite that far (so as not to use arrow functions), but echoes a similar sentiment, "In all my years of coding, I've learnt that being explicit is far more advantageous than concision."</h3>
+
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">Arrow functions in class property! Stage-2 FTW! Binding is for suckers! <a href="https://t.co/5WDpCWLg95">https://t.co/5WDpCWLg95</a> <a href="https://twitter.com/hashtag/reactjs?src=hash">#reactjs</a></p>&mdash; Zach Saffrin (@ZachSaffrin) <a href="https://twitter.com/ZachSaffrin/status/883330840700366848">July 7, 2017</a></blockquote>
+  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Back through components exercises.</li>
+    <li>Revisiting buttons & inputs sending data from within component children</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> time-blocking--but not too much of a threat today, though.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Wes Bos project pushed & myown component exercises FTW! #react</li>
+  </ol>
+    <hr />
   <h2 class="date">Saturday Aug 5th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Slept well and have decided to go with yet another react class. FEM/WesBos/Front-end Masters and now, Tyler McGinnis. They, each, seem pretty current. My instinct is to demur from "start-react-app" (or whatever-its-called). It's against my religion, --Not because I'm hard-core, it's just that I, one day, want to be responsible for the tooling. (Though, Wes-bos's course teaches how to "eject" from that in order to get access to the tooling, but I haven't gotten that far.)
