--- a/states/react/react.html
+++ b/states/react/react.html
@@ -6,7 +6,7 @@
     <!--entire page pre-->
 
 <div class="react-frame-light"><h1 class="chtitle dkmango">REACT STATE:</h1>
-  <h2 class="ctrtxt">From static component with <em>"untracted input"</em> to Stateful component in a few easy steps</h2>
+  <h2 class="ctrtxt">From static component to Stateful component <em>in a few easy steps</em></h2>
 <div class="brdr-b w40 ctr ctrtxt">
 <p>A component can only modify it's own state
 and cannot modify another component's state.
