--- a/states/home/home.html
+++ b/states/home/home.html
@@ -4,16 +4,16 @@
 <pre>
 <!-- pre for all -->
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.this()</h1>
-<h2>practical notes, example code, advice and experimentation.</h2>
+<h2>practical notes, example code, training notes and experimentation.</h2>
 <p>These pages are a collection of code & advice that I've collected over the past year distilled from myriad sources in web development.</p>
 </div>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
 <h2>This is a "living-document"</h2>
-<p>These are not comprehensive walkthroughs. CodeJournal is a collection of mini-lessons that are being edited regularly
-<br />These lessons exist as a record of my own progress & are, as of yet, unsorted and quite random. They are, currently, a list of personal notes to be made available as a searchable reference in the near future.
+<p>CodeJournal is a collection of mini-lessons that are being edited regularly
+<br/>These lessons are a record of my own progress & are, as of yet, unsorted. Daily_Standup is list of personal notes to be made available as a searchable reference.
 <br>
-<em class="bold">CodeJournal</em>'s larger goal is to reduce some of the pain points<br /> of learning and mastering difficult tech in web development.</p>
-<span class="sm chtitle dkgrey2">attribution of code and recommendations to useful articles, presentations, lectures, books, etc. will continue to be made as I iterate over these pages regularly.</span>
+
+
 </div>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
 <h2>This is a fan-site <em>of</em> developer-students <em>for</em> developer-students.</h2>
@@ -24,7 +24,7 @@
 <footer class="grade-bg sm comfort"><ul><li><a target="_blank" href="https://github.com/Beauvelop">github</a></li>
   <li><a href="https://codepen.io/beau_dev/" target="_blank">codepen</a></li>
   <li><a target="_blank" href="https://twitter.com/beau_dev">twitter</a></li></ul>
-  <h6 class="ctr sm">No claim of copyright (nor of expertise 🤓). On the contrary, please use CodeJournal in your own study. Follow the exercises & the links provided! Be patient, painstaking & love what you do! <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
+  <h6 class="ctr sm"><br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
 </footer>
 
 </div>
