--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,10 +23,30 @@
     </ol>
         <hr />
   -->
+  <h2 class="date">Friday Aug 15th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Going through the RWD training by Ben Callahan (FEM). Excellent class and extremely thorough.
+  <br />
+  Deciding whether or not next project should be in Angular or React. I think I'm ready.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+  Fetching data from an API can be an obstacle for <a href="https://twitter.com/hashtag/ReactJs?src=hash">#ReactJs</a> newcomers!<br><br>I&#39;ve written up a post on how to approach it 🙂<a href="https://t.co/FK3BYhCSD9">https://t.co/FK3BYhCSD9</a></p>&mdash; Robin Wieruch (@rwieruch) <a href="https://twitter.com/rwieruch/status/895702402887589888">August 10, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li>Finish WESBOS training react. Start up the module on mongo.db</li>
+    <li><span class="ltred">Potential Blocks:</span> time blocking</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Saturday Aug 12th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
-  <h3 class="subtitle">I've begun to understand stateful components. A week of heads-down in React is finally reaping rewards. It's a text-book example of "if it hurts, do it more" strategy. I'm composing components sans constructors and super() and the other gobble-dee-gook. It's an abstraction that I just--don't--quite--get...(using a stage-2 propposal:<code>"plugins": ["babel-plugin-transform-class-properties"]</code>)<br />
-  I may have to go back to the conventional way before I get comfortable with what this more concise code is doing.<br /><br />I heard an interesting comment by Kyle Simpson on arrow functions. Kyle's advice for them is the same for anon functions..."Use named functions" as self-documenting code. In this FEM React training as well... Brian Holt doesn't go quite that far (so as not to use arrow functions), but echoes a similar sentiment, "In all my years of coding, I've learnt that being explicit is far more advantageous than concision."</h3>
+  <h3 class="subtitle">I've begun to understand stateful components. A week of heads-down in React is finally reaping rewards.</code>)<br />
+  I may have to go back to the conventional way before I get comfortable with what this more concise code is doing.<br /><br />I heard an interesting comment by Kyle Simpson on arrow functions. Kyle's advice for them is the same for anon functions..."Use named functions" as self-documenting code. In this FEM React training as well... Brian Holt doesn't go quite that far (as not to use arrow functions), but echoes a similar sentiment, "In all my years of coding, I've learnt that being explicit is far more advantageous than concision." --And elsewhere (lectures on CS FEM when discussing recursion), "Don't be clever unless you really have to...If a given recursion is not readable, just use a loop (for ease of understandability)--Unless, of course, the recursion is the more readable code..."</h3>
 
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">Arrow functions in class property! Stage-2 FTW! Binding is for suckers! <a href="https://t.co/5WDpCWLg95">https://t.co/5WDpCWLg95</a> <a href="https://twitter.com/hashtag/reactjs?src=hash">#reactjs</a></p>&mdash; Zach Saffrin (@ZachSaffrin) <a href="https://twitter.com/ZachSaffrin/status/883330840700366848">July 7, 2017</a></blockquote>
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
