--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -1002,8 +1002,46 @@ for (var i = 0; i < purps.length; i++) {
 
 
   <div class="slate-skyblue-fr">
-    <h3 class="chtitle">Recursion</h3> II. Factorial
-    <pre class="prettyprint w40">function factorial(n) {
+    <h3 class="chtitle">Recursion</h3>
+The BASE CASE is "when you want to stop recursing"
+The first line of any recursion OUGHT to be the base case because you want to avoid
+stack overflows.
+
+Give Fn a maximum output & start it with a number...
+
+<pre class="prettyprint linenums w40">function basicRecursion(max, current) {
+  if (current > max) return;
+  console.log('current', current);
+  basicRecursion(max, current + 1);
+}
+
+basicRecursion(6, 1);
+
+// current 1
+// current 2
+// current 3
+// current 4
+// current 5
+// current 6</pre>
+
+
+
+I. Fibonacci: the sum of the two prior numbers past the 2nd index in the sequence
+
+<pre class="prettyprint w40 linenums">
+  function fib(num) {
+  // First we establish the base case
+    if (num <= 2) return 1;
+    else return fib(num - 1) + fib(num - 2);
+  }
+
+  console.log(fib(6));
+</pre>
+
+
+
+II. Factorial
+<pre class="prettyprint linenums w40">function factorial(n) {
     if(n< 2) {
       return 1;
     } else {
