cleanup, journal entry, ecma view

--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -9,8 +9,7 @@
 <!--
 -->
 <div class="simple-frame"><h3 class="chtitle dkblue">Note on Object.keys()</h3>
-<h1 class="ltred thin">Q:</h1>What higher-order Fn do we use to turn an array to an Object?<br />
-<h3 class="ans dkblue">.reduce()</h3>
+<h4 class="chtitle wh"><span class="ltred med thin">Q:</span>What higher-order Fn do we use to turn an array to an Object? <span class="ans dkorange med">.reduce()</span></h4>
 
 Conversely, a great way to turn an Object to an array is with the vanilla js...Object.keys();
 
