--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -25,7 +25,9 @@
   -->
   <h2 class="date">Thursday Aug 17th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
-  <h3 class="subtitle">Going through "Deep JS Foundations: Kyle Simpson (FEM)" (<a href="https://frontendmasters.com/courses/javascript-foundations/introduction" target="_blank">And it is awesome</a>)... "The closure system is probably the most important concept ever invented in all of computing science..."</h3>
+  <h3 class="subtitle">Going through "Deep JS Foundations: Kyle Simpson (FEM)" (<a href="https://frontendmasters.com/courses/javascript-foundations/introduction" target="_blank">And it is awesome</a>)...<br />
+  "The closure system is probably the most important concept ever invented in all of computing science..."<br />
+  "The Javascript compiler architecture is vastly more sophisticated than any architecture for any other language out there..."</h3>
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">10 Guidelines to Improve Your Web Accessibility: <a href="https://t.co/ex10dXbnbh">https://t.co/ex10dXbnbh</a></p>&mdash; Frontend Daily (@FrontendDaily) <a href="https://twitter.com/FrontendDaily/status/897560287515222017">August 15, 2017</a></blockquote>
   <br>
 
@@ -39,7 +41,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>Nested scope&closure repo almost complete</li>
+    <li>Nested scope & closure repo almost complete</li>
   </ol>
   <hr />
 
@@ -53,13 +55,12 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
     <li>Finish WESBOS training react. Start up the module on mongo.db</li>
     <li><span class="ltred">Potential Blocks:</span> time blocking</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>Mongo begun.</li>
+    <li>Mongo begun!🎉</li>
     <li>refactored wesbos training</li>
   </ol>
   <hr />
