--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,12 +3,10 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Friday Aug 4th, 2017</h2>
-    <h4 class="sleep">Slept: 5 hours</h4><br><br>
-    <h3 class="subtitle">React is slow-going. The implementation of things like Obj destructuring seem deceptively easy. -Surprisingly easy. I've been offered the opportunity to beta test the training (to be launched next week) by Petr at  </h3>
-    <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
-    <p lang="en" dir="ltr">The rendering process of a web page <a href="https://t.co/vWjj77tYzv">https://t.co/vWjj77tYzv</a>
-    </p>&mdash; Sven Baumgartner (@svenbaumgartner) <a href="https://twitter.com/svenbaumgartner/status/793736407789477889">November 2, 2016</a></blockquote>
+    <h2 class="date">Thursday Aug 31st, 2017</h2>
+    <h4 class="sleep">Slept: 8 hours</h4><br><br>
+    <h3 class="subtitle"> Back from a hiatus. Ran into some issues with pg.connect not working because of the 7.0 update. Serious problem and unresolved. --Swearing alot these days. Working on Dan Wellman's es6 training & it's excellent.</h3>
+    <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">Typical JavaScript interview exercises (explained)<br>{ author: <a href="https://twitter.com/_maxpou">@_maxpou</a> }<a href="https://t.co/k7oSKL3QFM">https://t.co/k7oSKL3QFM</a></p>&mdash; The Practical Dev (@ThePracticalDev) <a href="https://twitter.com/ThePracticalDev/status/900795596180684802">August 24, 2017</a></blockquote>
 
     <br>
     <h3>To do:</h3>
@@ -21,8 +19,26 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-        <hr />
+    <hr />
   -->
+  <h2 class="date">Thursday Aug 31st, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle"> Back from a hiatus. Ran into some issues with pg.connect not working because of the 7.0 update. Serious problem and unresolved. --Swearing alot these days. Working on Dan Wellman's es6 training & it's excellent.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">Typical JavaScript interview exercises (explained)<br>{ author: <a href="https://twitter.com/_maxpou">@_maxpou</a> }<a href="https://t.co/k7oSKL3QFM">https://t.co/k7oSKL3QFM</a></p>&mdash; The Practical Dev (@ThePracticalDev) <a href="https://twitter.com/ThePracticalDev/status/900795596180684802">August 24, 2017</a></blockquote>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Spread Operator in functions and arrays</li>
+    <li>defining default parameters in the es6 function signatures</li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Spread operators</li>
+    <li>scoping/hoisting with let & const</li>
+  </ol>
+  <hr />
   <h2 class="date">Thursday Aug 17th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Going through "Deep JS Foundations: Kyle Simpson (FEM)" (<a href="https://frontendmasters.com/courses/javascript-foundations/introduction" target="_blank">And it is awesome</a>)...<br />
